--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -48,17 +48,15 @@ li {
   padding: 0 10px;
   cursor: pointer;
   padding: 10px; }
-
-#btn:hover {
-  background-color: var(--amarillo);
-  color: var(--azul);
-  font-weight: bold;
-  transition: 0.8s; }
+  #btn:hover {
+    background-color: var(--amarillo);
+    color: var(--azul);
+    font-weight: bold;
+    transition: 0.8s; }
 
 .footer {
   background-color: #06919a;
-  display: flex;
-  /* text-align: center; */ }
+  display: flex; }
 
 .social-media .icon {
   height: 40px;
@@ -70,11 +68,10 @@ li {
   line-height: 40px;
   border-radius: 50%;
   margin: 15px; }
-
-.icon:hover {
-  background-color: #fff;
-  color: #06919a;
-  transition: 0.8s; }
+  .social-media .icon:hover {
+    background-color: #fff;
+    color: #06919a;
+    transition: 0.8s; }
 
 #scrollspy-footer .bi {
   background-color: var();
@@ -89,10 +86,9 @@ li {
   font-size: 14px;
   border-top: 1px solid #FFF;
   color: #FFF; }
-
-.copyright span {
-  color: #FCA311;
-  font-weight: bold; }
+  .copyright span {
+    color: #FCA311;
+    font-weight: bold; }
 
 /* NAV BAR TOP - DESKTOP  */
 .top {
@@ -112,50 +108,39 @@ li {
 
 .header li a {
   float: left;
-  /* color: var(--primario); */
-  /* text-align: center; */
   padding: 5px;
-  text-decoration: none;
-  /* font-size: 16px;
-    line-height: 25px;
-    border-radius: 4px; */ }
+  text-decoration: none; }
 
 .logo {
   color: white;
-  /* line-height: 70px; */
   padding: 0 20px;
   font-weight: 600;
   text-transform: uppercase;
   font-size: 23px;
-  font-style: italic;
-  /* justify-items: flex-start; */ }
+  font-style: italic; }
 
 .top ul li {
   float: left;
-  /* display: inline-block; */
   padding: 0 20px;
   color: var(--primario);
   text-align: center;
   font-size: 16px;
-  line-height: 25px;
-  /* border-radius: 4px; */ }
+  line-height: 25px; }
 
 .top ul a {
   color: var(--primario);
   font-size: 13px;
   text-transform: uppercase;
   font-weight: bold; }
-
-.top ul a:hover {
-  background-color: var(--primario);
-  color: var(--cyan);
-  border-radius: 4px;
-  padding-bottom: 4px;
-  transition: all .3s; }
+  .top ul a:hover {
+    background-color: var(--primario);
+    color: var(--cyan);
+    border-radius: 4px;
+    padding-bottom: 4px;
+    transition: all .3s; }
 
 .selected {
   background: var(--azul);
-  /* color: var(--amarillo); */
   padding: 5px;
   border-radius: 4px; }
 
@@ -168,17 +153,15 @@ li {
   bottom: 0;
   border-radius: 30px 30px 0 0;
   display: none; }
-
-.bottom ul li i {
-  color: white;
-  font-size: 15px; }
-
-.bottom ul li {
-  position: absolute;
-  left: 50%;
-  bottom: 50%;
-  transform: translate(-50%, 50%);
-  transition: all .5s; }
+  .bottom ul li i {
+    color: white;
+    font-size: 15px; }
+  .bottom ul li {
+    position: absolute;
+    left: 50%;
+    bottom: 50%;
+    transform: translate(-50%, 50%);
+    transition: all .5s; }
 
 .bottom ul li:nth-child(1) {
   left: 20%;
@@ -225,12 +208,11 @@ li {
   transition: all 0.3s ease;
   font-size: 16px;
   cursor: pointer; }
-
-.btn-home:hover {
-  /* text-decoration: none; */
-  border: 3px solid #FCA311;
-  background-color: #FCA311;
-  color: #Fff; }
+  .btn-home:hover {
+    /* text-decoration: none; */
+    border: 3px solid #FCA311;
+    background-color: #FCA311;
+    color: #Fff; }
 
 .banner-portafolio {
   background-color: var(--primario); }
@@ -295,9 +277,8 @@ li {
 
 .titulo {
   font-size: 30px; }
-
-.titulo span {
-  color: var(--amarillo); }
+  .titulo span {
+    color: var(--amarillo); }
 
 .container-servicios {
   overflow: hidden;
@@ -307,9 +288,8 @@ li {
   border-radius: 1rem;
   position: relative;
   margin: 0.5rem; }
-
-.container-servicios img {
-  height: 300px; }
+  .container-servicios img {
+    height: 300px; }
 
 .name {
   font-weight: bold;
@@ -353,11 +333,10 @@ ul {
 .company-info {
   background: var(--azul);
   color: #fff; }
-
-.company-info h3,
-.company-info ul {
-  text-align: center;
-  margin: 0 0 1rem 0; }
+  .company-info h3,
+  .company-info ul {
+    text-align: center;
+    margin: 0 0 1rem 0; }
 
 .contact {
   background: #fff; }
@@ -367,37 +346,31 @@ ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px; }
-
-.contact form label {
-  display: block; }
-
-.contact form p {
-  margin: 0; }
-
-.contact form .full {
-  grid-column: 1 / 3; }
-
-.contact form button,
-.contact form input,
-.contact form textarea {
-  width: 100%;
-  padding: 1em;
-  border: 1px solid var(--cyan); }
-
-.contact form button {
-  background: var(--amarillo);
-  color: var(--azul);
-  font-weight: bold;
-  border: 0;
-  text-transform: uppercase; }
-
-.contact form button:hover,
-.contact form button:focus {
-  background: var(--azul);
-  color: var(--amarillo);
-  font-weight: bold;
-  outline: 0;
-  transition: background-color 0.3s ease-out; }
+  .contact form label {
+    display: block; }
+  .contact form p {
+    margin: 0; }
+  .contact form .full {
+    grid-column: 1 / 3; }
+  .contact form button,
+  .contact form input,
+  .contact form textarea {
+    width: 100%;
+    padding: 1em;
+    border: 1px solid var(--cyan); }
+  .contact form button {
+    background: var(--amarillo);
+    color: var(--azul);
+    font-weight: bold;
+    border: 0;
+    text-transform: uppercase; }
+    .contact form button:focus,
+    .contact form button :hover {
+      background: var(--azul);
+      color: var(--amarillo);
+      font-weight: bold;
+      outline: 0;
+      transition: background-color 0.3s ease-out; }
 
 /* -----------------SKILLS FINAL----------------- RESPONSIVE INICIO -----------------*/
 @media (max-width: 768px) {
