--- a/SCSS/_contacto.scss
+++ b/SCSS/_contacto.scss
@@ -1,88 +1,88 @@
-
-  .container {
+.container {
     max-width: 1170px;
     margin-left: auto;
     margin-right: auto;
     padding: 1em;
-  }
-  
-  ul {
+}
+
+ul {
     list-style: none;
     padding: 0;
-  }
-  
-  .brand {
+}
+
+.brand {
     text-align: center;
-  }
-  
-  .company-info h3 {
+}
+
+.company-info h3 {
     color: var(--amarillo);
-  }
-  
-  .wrapper {
+}
+
+.wrapper {
     box-shadow: 0 0 20px 0 rgba(72, 94, 116, 0.7);
-  }
-  
-  .wrapper>* {
+}
+
+.wrapper>* {
     padding: 1em;
-  }
-  
-  .company-info {
+}
+
+.company-info {
     background: var(--azul);
     color: #fff;
-  }
-  
-  .company-info h3,
-  .company-info ul {
-    text-align: center;
-    margin: 0 0 1rem 0;
-  }
-  
-  .contact {
+
+    h3,
+    ul {
+        text-align: center;
+        margin: 0 0 1rem 0;
+    }
+}
+
+.contact {
     background: #fff;
-  }
-  
-  /* FORM STYLES */
-  .contact form {
+}
+
+/* FORM STYLES */
+.contact form {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
-  }
-  
-  .contact form label {
-    display: block;
-  }
-  
-  .contact form p {
-    margin: 0;
-  }
-  
-  .contact form .full {
-    grid-column: 1 / 3;
-  }
-  
-  .contact form button,
-  .contact form input,
-  .contact form textarea {
-    width: 100%;
-    padding: 1em;
-    border: 1px solid var(--cyan);
-  }
-  
-  .contact form button {
-    background: var(--amarillo);
-    color: var(--azul);
-    font-weight: bold;
-    border: 0;
-    text-transform: uppercase;
-  }
-  
-  .contact form button:hover,
-  .contact form button:focus {
-    background: var(--azul);
-    color: var(--amarillo);
-    font-weight: bold;
-    outline: 0;
-    transition: background-color 0.3s ease-out;
-  }
-  
+
+    label {
+        display: block;
+    }
+
+    p {
+        margin: 0;
+    }
+
+    .full {
+        grid-column: 1 / 3;
+    }
+
+    button,
+    input,
+    textarea {
+        width: 100%;
+        padding: 1em;
+        border: 1px solid var(--cyan);
+    }
+
+
+    button {
+        background: var(--amarillo);
+        color: var(--azul);
+        font-weight: bold;
+        border: 0;
+        text-transform: uppercase;
+
+        &:focus,
+        :hover {
+            background: var(--azul);
+            color: var(--amarillo);
+            font-weight: bold;
+            outline: 0;
+            transition: background-color 0.3s ease-out;
+        }
+    }
+
+}
