--- a/SCSS/_home.scss
+++ b/SCSS/_home.scss
@@ -1,12 +1,15 @@
-.container-home h1 span {
-    color: var(--amarillo);
-  }
-  
-  .container-home h4 {
-    color: var(--cyan);
-  }
-  
-  .btn-home {
+.container-home {
+    h1 span {
+        color: var(--amarillo);
+    }
+
+    h4 {
+        color: var(--cyan);
+    }
+
+}
+
+.btn-home {
     display: inline-block;
     padding: 10px;
     width: 200px;
@@ -18,12 +21,11 @@
     transition: all 0.3s ease;
     font-size: 16px;
     cursor: pointer;
-  }
-  
-  .btn-home:hover {
-    /* text-decoration: none; */
-    border: 3px solid #FCA311;
-    background-color: #FCA311;
-    color: #Fff;
-  }
-  
+
+    &:hover {
+        /* text-decoration: none; */
+        border: 3px solid #FCA311;
+        background-color: #FCA311;
+        color: #Fff;
+    }
+}
