--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -95,7 +95,8 @@ li {
   overflow: hidden;
   position: fixed;
   top: 0;
-  width: 100%; }
+  width: 100%;
+  z-index: 3; }
 
 .header {
   overflow: hidden;
@@ -112,12 +113,14 @@ li {
   text-decoration: none; }
 
 .logo {
-  color: white;
+  color: var(--amarillo);
   padding: 0 20px;
   font-weight: 600;
   text-transform: uppercase;
   font-size: 23px;
   font-style: italic; }
+  .logo span {
+    color: var(--azul); }
 
 .top ul li {
   float: left;
@@ -129,7 +132,7 @@ li {
 
 .top ul a {
   color: var(--primario);
-  font-size: 13px;
+  font-size: 12px;
   text-transform: uppercase;
   font-weight: bold; }
   .top ul a:hover {
@@ -150,45 +153,40 @@ li {
   height: 60px;
   background-color: var(--cyan);
   position: fixed;
+  z-index: 3;
   bottom: 0;
   border-radius: 30px 30px 0 0;
   display: none; }
-  .bottom ul li i {
-    color: white;
-    font-size: 15px; }
   .bottom ul li {
     position: absolute;
     left: 50%;
     bottom: 50%;
     transform: translate(-50%, 50%);
     transition: all .5s; }
-
-.bottom ul li:nth-child(1) {
-  left: 20%;
-  padding: 17px; }
-
-.bottom ul li:nth-child(2) {
-  left: 35%;
-  padding: 17px 19px; }
-
-.bottom ul li:nth-child(3) {
-  left: 50%;
-  padding: 17px 18px; }
-
-.bottom ul li:nth-child(4) {
-  left: 65%;
-  padding: 17px 19px; }
-
-.bottom ul li:nth-child(5) {
-  left: 80%;
-  padding: 17px 19px; }
-
-.bottom ul li:hover {
-  bottom: 90%;
-  background-color: var(--azul);
-  border-radius: 50%;
-  border: 3px solid var(--amarillo);
-  transition: all 0.3s; }
+    .bottom ul li i {
+      color: white;
+      font-size: 15px; }
+    .bottom ul li:nth-child(1) {
+      left: 20%;
+      padding: 17px; }
+    .bottom ul li:nth-child(2) {
+      left: 35%;
+      padding: 17px 19px; }
+    .bottom ul li:nth-child(3) {
+      left: 50%;
+      padding: 17px 18px; }
+    .bottom ul li:nth-child(4) {
+      left: 65%;
+      padding: 17px 19px; }
+    .bottom ul li:nth-child(5) {
+      left: 80%;
+      padding: 17px 19px; }
+    .bottom ul li:hover {
+      bottom: 90%;
+      background-color: var(--azul);
+      border-radius: 50%;
+      border: 3px solid var(--amarillo);
+      transition: all 0.3s; }
 
 .container-home h1 span {
   color: var(--amarillo); }
