--- a/SCSS/_navbar.scss
+++ b/SCSS/_navbar.scss
@@ -1,126 +1,128 @@
- /* NAV BAR TOP - DESKTOP  */
+/* NAV BAR TOP - DESKTOP  */
 
- .top {
-     overflow: hidden;
-     position: fixed;
-     top: 0;
-     width: 100%;
- }
+.top {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 3;
+}
 
- .header {
-     overflow: hidden;
-     background-color: var(--cyan);
-     padding: 5px;
-     display: flexbox;
- }
+.header {
+    overflow: hidden;
+    background-color: var(--cyan);
+    padding: 5px;
+    display: flexbox;
+}
 
- .header-right {
-     float: right;
- }
-
-
- .header li a {
-     float: left;
-     padding: 5px;
-     text-decoration: none;
- }
-
- .logo {
-     color: white;
-     padding: 0 20px;
-     font-weight: 600;
-     text-transform: uppercase;
-     font-size: 23px;
-     font-style: italic;
- }
-
- .top ul li {
-     float: left;
-     padding: 0 20px;
-     color: var(--primario);
-     text-align: center;
-     font-size: 16px;
-     line-height: 25px;
- }
+.header-right {
+    float: right;
+}
 
 
+.header li a {
+    float: left;
+    padding: 5px;
+    text-decoration: none;
+}
 
- .top ul a {
-     color: var(--primario);
-     font-size: 13px;
-     text-transform: uppercase;
-     font-weight: bold;
+.logo {
+    color: var(--amarillo);
+    padding: 0 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 23px;
+    font-style: italic;
 
-     &:hover {
-         background-color: var(--primario);
-         color: var(--cyan);
-         border-radius: 4px;
-         padding-bottom: 4px;
-         transition: all .3s;
-     }
- }
+    span {
+        color: var(--azul);
+    }
+}
+
+.top ul {
+    li {
+        float: left;
+        padding: 0 20px;
+        color: var(--primario);
+        text-align: center;
+        font-size: 16px;
+        line-height: 25px;
+    }
+
+    a {
+        color: var(--primario);
+        font-size: 12px;
+        text-transform: uppercase;
+        font-weight: bold;
+
+        &:hover {
+            background-color: var(--primario);
+            color: var(--cyan);
+            border-radius: 4px;
+            padding-bottom: 4px;
+            transition: all .3s;
+        }
+    }
+}
 
 
- .selected {
-     background: var(--azul);
-     padding: 5px;
-     border-radius: 4px;
- }
+.selected {
+    background: var(--azul);
+    padding: 5px;
+    border-radius: 4px;
+}
 
 
 
- /* NAV BAR BOTTOM - MOBILE  */
 
- .bottom {
-     width: 100%;
-     height: 60px;
-     background-color: var(--cyan);
-     position: fixed;
-     bottom: 0;
-     border-radius: 30px 30px 0 0;
-     display: none;
+/* NAV BAR BOTTOM - MOBILE  */
 
-     ul li i {
-         color: white;
-         font-size: 15px;
-     }
-
-     ul li {
+.bottom {
+    width: 100%;
+    height: 60px;
+    background-color: var(--cyan);
+    position: fixed;
+    z-index: 3;
+    bottom: 0;
+    border-radius: 30px 30px 0 0;
+    display: none;
+    ul li {
         position: absolute;
         left: 50%;
         bottom: 50%;
         transform: translate(-50%, 50%);
         transition: all .5s;
-    }
- }
+        i {
+            color: white;
+            font-size: 15px;
 
-.bottom ul li {
-    &:nth-child(1) {
-        left: 20%;
-        padding: 17px;
+        }
+        &:nth-child(1) {
+            left: 20%;
+            padding: 17px;
+        }
+        &:nth-child(2) {
+            left: 35%;
+            padding: 17px 19px;
+        }
+        &:nth-child(3) {
+            left: 50%;
+            padding: 17px 18px;
+        }
+        &:nth-child(4) {
+            left: 65%;
+            padding: 17px 19px;
+        }
+        &:nth-child(5) {
+            left: 80%;
+            padding: 17px 19px;
+        }
+        &:hover {
+            bottom: 90%;
+            background-color: var(--azul);
+            border-radius: 50%;
+            border: 3px solid var(--amarillo);
+            transition: all 0.3s;
+        }
     }
-    &:nth-child(2) {
-        left: 35%;
-        padding: 17px 19px;
-    }
-    &:nth-child(3) {
-        left: 50%;
-        padding: 17px 18px;
-    }
-    &:nth-child(4) {
-        left: 65%;
-        padding: 17px 19px;
-    }
-    &:nth-child(5) {
-        left: 80%;
-        padding: 17px 19px;
-    }
-   &:hover {
-    bottom: 90%;
-    background-color: var(--azul);
-    border-radius: 50%;
-    border: 3px solid var(--amarillo);
-    transition: all 0.3s;
-}
-   
 }
