Extend+BEM en Botones

--- a/SCSS/_home.scss
+++ b/SCSS/_home.scss
@@ -9,23 +9,23 @@
 
 }
 
-.btn-home {
-    display: inline-block;
-    padding: 10px;
-    width: 200px;
-    border: 3px solid #14213d;
-    background-color: #14213d;
-    color: #FFF;
-    border-radius: 30px;
-    text-transform: capitalize;
-    transition: all 0.3s ease;
-    font-size: 16px;
-    cursor: pointer;
+// .boton {
+//     display: inline-block;
+//     padding: 10px;
+//     width: 200px;
+//     border: 3px solid #14213d;
+//     background-color: #14213d;
+//     color: #FFF;
+//     border-radius: 30px;
+//     text-transform: capitalize;
+//     transition: all 0.3s ease;
+//     font-size: 16px;
+//     cursor: pointer;
 
-    &:hover {
-        /* text-decoration: none; */
-        border: 3px solid #FCA311;
-        background-color: #FCA311;
-        color: #Fff;
-    }
-}
+//     &:hover {
+//         /* text-decoration: none; */
+//         border: 3px solid #FCA311;
+//         background-color: #FCA311;
+//         color: #Fff;
+//     }
+// }
