--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -194,24 +194,6 @@ li {
 .container-home h4 {
   color: var(--cyan); }
 
-.btn-home {
-  display: inline-block;
-  padding: 10px;
-  width: 200px;
-  border: 3px solid #14213d;
-  background-color: #14213d;
-  color: #FFF;
-  border-radius: 30px;
-  text-transform: capitalize;
-  transition: all 0.3s ease;
-  font-size: 16px;
-  cursor: pointer; }
-  .btn-home:hover {
-    /* text-decoration: none; */
-    border: 3px solid #FCA311;
-    background-color: #FCA311;
-    color: #Fff; }
-
 .banner-portafolio {
   background-color: var(--primario); }
 
@@ -350,25 +332,11 @@ ul {
     margin: 0; }
   .contact form .full {
     grid-column: 1 / 3; }
-  .contact form button,
   .contact form input,
   .contact form textarea {
     width: 100%;
     padding: 1em;
     border: 1px solid var(--cyan); }
-  .contact form button {
-    background: var(--amarillo);
-    color: var(--azul);
-    font-weight: bold;
-    border: 0;
-    text-transform: uppercase; }
-    .contact form button:focus,
-    .contact form button :hover {
-      background: var(--azul);
-      color: var(--amarillo);
-      font-weight: bold;
-      outline: 0;
-      transition: background-color 0.3s ease-out; }
 
 /* -----------------SKILLS FINAL----------------- RESPONSIVE INICIO -----------------*/
 @media (max-width: 768px) {
@@ -400,3 +368,24 @@ ul {
     text-align: left; } }
 
 /* -----------------RESPONSIVE FINAL---------------------------------------------*/
+.boton, .boton--contacto {
+  display: inline-block;
+  padding: 10px;
+  width: 200px;
+  border: 3px solid var(--azul);
+  background-color: var(--azul);
+  color: var(--primario);
+  border-radius: 30px;
+  text-transform: uppercase;
+  transition: all 0.3s ease;
+  font-size: 16px;
+  cursor: pointer; }
+  .boton:hover, .boton--contacto:hover {
+    border: 3px solid var(--amarillo);
+    background-color: var(--amarillo);
+    color: var(--azul);
+    font-weight: bold; }
+
+.boton--contacto {
+  width: 100%;
+  padding: 1rem; }
