--- a/SCSS/_contacto.scss
+++ b/SCSS/_contacto.scss
@@ -59,7 +59,7 @@ ul {
         grid-column: 1 / 3;
     }
 
-    button,
+
     input,
     textarea {
         width: 100%;
@@ -67,22 +67,28 @@ ul {
         border: 1px solid var(--cyan);
     }
 
+    // button {
+    //     width: 100%;
+    //     padding: 1em;
+    //     border: 1px solid var(--amarillo);
+    // }
 
-    button {
-        background: var(--amarillo);
-        color: var(--azul);
-        font-weight: bold;
-        border: 0;
-        text-transform: uppercase;
 
-        &:focus,
-        :hover {
-            background: var(--azul);
-            color: var(--amarillo);
-            font-weight: bold;
-            outline: 0;
-            transition: background-color 0.3s ease-out;
-        }
-    }
+    // button {
+    //     background: var(--amarillo);
+    //     color: var(--azul);
+    //     font-weight: bold;
+    //     border: 0;
+    //     text-transform: uppercase;
+
+    //     &:focus,
+    //     :hover {
+    //         background: var(--azul);
+    //         color: var(--amarillo);
+    //         font-weight: bold;
+    //         outline: 0;
+    //         transition: background-color 0.3s ease-out;
+    //     }
+    // }
 
 }
