--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -198,6 +198,9 @@ li {
 .banner-portafolio {
   background-color: var(--primario); }
 
+.carusel-portafolio {
+  width: 90%; }
+
 .owl-carousel img {
   height: 40vh;
   width: 100%;
@@ -217,7 +220,10 @@ li {
 .owl-prev span,
 .owl-next span {
   font-size: 80px;
-  color: black; }
+  color: var(--cyan); }
+  .owl-prev span:hover,
+  .owl-next span:hover {
+    color: var(--amarillo); }
 
 .owl-theme,
 .owl-nav[class*="owl-"]:hover {
@@ -242,7 +248,8 @@ li {
 
 .newsletter {
   background-color: var(--azul);
-  color: var(--primario); }
+  color: var(--primario);
+  width: 100%; }
 
 .banner-servicios img {
   width: 500px;
@@ -348,14 +355,22 @@ ul {
   .copyright {
     display: none; }
   .bottom {
-    display: block; } }
+    display: block; }
+  .wrapper-grid {
+    margin-bottom: 40px; }
+  .tools,
+  .newsletter {
+    margin-bottom: 70px; } }
 
 @media (max-width: 600px) {
   .bottom {
     display: block; }
   /* CONTACT */
   .container {
-    margin-bottom: 70px; } }
+    margin-bottom: 70px; }
+  .newsletter {
+    margin-bottom: 15px;
+    font-size: 5px; } }
 
 @media (min-width: 600px) {
   /* CONTACT */
