--- a/SCSS/_navbar.scss
+++ b/SCSS/_navbar.scss
@@ -1,3 +1,5 @@
+@import "breakpoints";
+
 /* NAV BAR TOP - DESKTOP  */
 
 .top {
@@ -6,6 +8,7 @@
     top: 0;
     width: 100%;
     z-index: 3;
+
 }
 
 .header {
@@ -63,6 +66,10 @@
             transition: all .3s;
         }
     }
+
+    @include responsive (tablet) {
+        display: none;
+    }
 }
 
 
@@ -86,37 +93,45 @@
     bottom: 0;
     border-radius: 30px 30px 0 0;
     display: none;
+
     ul li {
         position: absolute;
         left: 50%;
         bottom: 50%;
         transform: translate(-50%, 50%);
         transition: all .5s;
+
         i {
             color: white;
             font-size: 15px;
 
         }
+
         &:nth-child(1) {
             left: 20%;
             padding: 17px;
         }
+
         &:nth-child(2) {
             left: 35%;
             padding: 17px 19px;
         }
+
         &:nth-child(3) {
             left: 50%;
             padding: 17px 18px;
         }
+
         &:nth-child(4) {
             left: 65%;
             padding: 17px 19px;
         }
+
         &:nth-child(5) {
             left: 80%;
             padding: 17px 19px;
         }
+
         &:hover {
             bottom: 90%;
             background-color: var(--azul);
@@ -125,4 +140,13 @@
             transition: all 0.3s;
         }
     }
+    
+    @include responsive (phone) {
+        display: block;
+    }
+
+    @include responsive (tablet) {
+        display: block;
+    }
+
 }
