--- a/SCSS/_carusel.scss
+++ b/SCSS/_carusel.scss
@@ -1,3 +1,5 @@
+@import "breakpoints"; 
+
 .banner-portafolio {
   background-color: var(--primario);
 }
@@ -68,4 +70,8 @@
   background-color: var(--azul);
   color: var(--primario);
   width: 100%;
+
+  @include responsive (tablet){
+    padding-bottom: 70px;
+  }
 }
