--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -15,6 +15,7 @@
 @import "carusel";
 @import "servicios";
 @import "contacto";
+@import "tool";
 
 // BORRAR, BREAKPOINTS LA SUSTITUYO CON MIXIN
 // @import "responsive";
