--- a/SCSS/_carusel.scss
+++ b/SCSS/_carusel.scss
@@ -1,4 +1,4 @@
-@import "breakpoints"; 
+@import "breakpoints";
 
 .banner-portafolio {
   background-color: var(--primario);
@@ -71,7 +71,12 @@
   color: var(--primario);
   width: 100%;
 
-  @include responsive (tablet){
-    padding-bottom: 70px;
+  @include responsive (phone) {
+    margin-bottom: 15px;
+    font-size: 5px;
+  }
+
+  @include responsive (tablet) {
+    margin-bottom: 70px;
   }
 }
