--- a/SCSS/_contacto.scss
+++ b/SCSS/_contacto.scss
@@ -1,10 +1,14 @@
-@import "breakpoints"; 
+@import "breakpoints";
 
 .container {
     max-width: 1170px;
     margin-left: auto;
     margin-right: auto;
     padding: 1em;
+
+    @include responsive (phone) {
+        margin-bottom: 70px;
+    }
 }
 
 ul {
@@ -14,6 +18,10 @@ ul {
 
 .brand {
     text-align: center;
+
+    @include responsive (desktop) {
+        text-align: left;
+    }
 }
 
 .company-info h3 {
@@ -23,10 +31,19 @@ ul {
 .wrapper {
     padding-top: 20px;
     box-shadow: 0 0 20px 0 rgba(72, 94, 116, 0.7);
+
+    @include responsive (desktop) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 .wrapper>* {
     padding: 1em;
+
+    @include responsive (desktop) {
+        padding: 2em;
+    }
 }
 
 .company-info {
@@ -37,6 +54,10 @@ ul {
     ul {
         text-align: center;
         margin: 0 0 1rem 0;
+
+        @include responsive (desktop) {
+            text-align: left;
+        }
     }
 }
 
