--- a/SCSS/_responsive.scss
+++ b/SCSS/_responsive.scss
@@ -14,12 +14,12 @@
     // }
 
 
-    .wrapper-grid {
-      margin-bottom: 40px;
-    }
+    // .wrapper-grid {
+    //   margin-bottom: 40px;
+    // }
 
-    .tools,
-    .newsletter {
+    .tools{
+    // .newsletter {
       margin-bottom: 70px;
     }
 
@@ -28,20 +28,20 @@
 
   @media(max-width:600px) {
 
-    .bottom {
-      display: block;
-    }
+    // .bottom {
+    //   display: block;
+    // }
 
 
     /* CONTACT */
-    .container {
-      margin-bottom: 70px;
-    }
+    // .container {
+    //   margin-bottom: 70px;
+    // }
 
-    .newsletter {
-      margin-bottom: 15px;
-      font-size: 5px;
-    }
+    // .newsletter {
+    //   margin-bottom: 15px;
+    //   font-size: 5px;
+    // }
 
 
   }
@@ -50,20 +50,20 @@
   @media(min-width:600px) {
 
     /* CONTACT */
-    .wrapper {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-    }
+    // .wrapper {
+    //   display: grid;
+    //   grid-template-columns: 1fr 1fr;
+    // }
 
-    .wrapper>* {
-      padding: 2em;
-    }
+    // .wrapper>* {
+    //   padding: 2em;
+    // }
 
-    .company-info h3,
-    .company-info ul,
-    .brand {
-      text-align: left;
-    }
+    // .company-info h3,
+    // .company-info ul,
+    // .brand {
+    //   text-align: left;
+    // }
 
 
   }
