--- a/SCSS/_tool.scss
+++ b/SCSS/_tool.scss
@@ -1,6 +1,110 @@
-.tools {
-    
-    @include responsive (tablet) {
-        margin-bottom: 70px;
+
+.container {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.skills {
+    padding-top: var(- 40px);
+    padding-bottom: var(40px);
+    background-color: var(--primario);
+    text-align: center;
+
+    p {
+        font-size: 18px;
+        color: black;
+        font-weight: 400;
     }
+
+    h2 {
+        span {
+            color: var(--cyan);
+        }
+    }
+
+    h2 {
+        font-size: 35px;
+        color: var(--azul);
+        padding-bottom: 20px;
+    }
+
+    .text {
+        padding-bottom: 20px;
+    }
+}
+
+.skills .skill-card {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 60px;
+    margin-bottom: 70px;
+    margin-top: 60px;
+
+    .card {
+        padding: 25px;
+        text-align: center;
+        background-color: var(--azul);
+        border: 2px solid var(--cyan);
+        color: var(--primario);
+        transition: 1s;
+        position: relative;
+    }
+}
+
+.skills .card {
+    i {
+        font-size: 42px;
+        padding: 15px;
+        width: 75px;
+        height: 75px;
+        color: black;
+        background-color: var(--cyan);
+        position: absolute;
+        top: calc(-75px / 2);
+        transform: rotate(45deg);
+        left: 39%;
+        transition: 1s;
+        border: 1px solid var(--cyan);
+    }
+
+    p {
+        line-height: 1.7;
+        font-size: 16px;
+        color: var(--primario);
+    }
+
+    h4 {
+        padding-top: 30px;
+        padding-bottom: 10px;
+        font-size: 25px;
+        font-weight: 500;
+        color: var(--amarillo);
+    }
+}
+
+.skills .card:hover {
+    background-color: transparent;
+    border: 2px solid var(--amarillo);
+
+    i {
+        transform: rotate(0deg);
+        background-color: var(--azul);
+        border: 1px solid var(--amarillo);
+        color: var(--primario);
+    }
+}
+
+.skills .card:hover {
+    p {
+        color: black;
+        transition: 1s;
+    }
+
+    h4 {
+        color: var(--cyan);
+        transition: 1s;
+    }
+
 }
