--- a/SCSS/_tool.scss
+++ b/SCSS/_tool.scss
@@ -1,4 +1,3 @@
-
 .container {
     padding-left: 15px;
     padding-right: 15px;
@@ -67,6 +66,7 @@
         left: 39%;
         transition: 1s;
         border: 1px solid var(--cyan);
+        border-radius: 20%;
     }
 
     p {
