--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -19,3 +19,62 @@
 
 // BORRAR, BREAKPOINTS LA SUSTITUYO CON MIXIN
 // @import "responsive";
+
+// .typewriter {
+//     // position: absolute;
+//     // top: 35%;
+//     // left: 10%;
+//   }
+
+
+
+.typewriter h1 {
+    border-right: 1px solid var(--cyan);
+    white-space: nowrap;
+    overflow: hidden;
+    width: 490px;
+    white-space: nowrap;
+    overflow: hidden;
+    animation: typewriter 2s steps(25) 1s 1 normal both;
+    padding-bottom: 5px;
+}
+
+.typewriter #line-1 {
+    border-right: 1px solid var(--cyan);
+    white-space: nowrap;
+    overflow: hidden;
+    width: 425px;
+    white-space: nowrap;
+    overflow: hidden;
+    animation: typewriter 3s steps(40) 1s 1 normal both;
+    animation-delay: 3.5s;
+    padding: 1px;
+}
+
+// #line-2 {
+//     border-right: 1px solid white;
+//     white-space: nowrap;
+//     overflow: hidden;
+//     width: 405px;
+//     white-space: nowrap;
+//     overflow: hidden;
+//     animation: typewriter 3s steps(40) 1s 1 normal both;
+//     animation-delay: 7s;
+//   }
+
+  @keyframes typewriter {
+    0% {
+      width: 0;
+      border-right: none;
+    }
+    0.1% {
+      border-right: 1px solid rgb(220,220,220);
+    }
+    99.9% {
+      border-right: 1px solid rgb(220,220,220);
+    }
+    100% {
+      border: none;
+    }
+  }
+  
