--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -73,6 +73,44 @@ li {
     color: var(--azul);
     font-weight: bold; }
 
+.botoncito1 {
+  display: inline-block;
+  padding: 10px;
+  width: 100px;
+  border: 3px solid var(--amarillo);
+  background-color: var(--amarillo);
+  color: var(--primario);
+  border-radius: 30px;
+  text-transform: uppercase;
+  transition: all 0.3s ease;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer; }
+  .botoncito1:hover {
+    border: 3px solid var(--azul);
+    background-color: var(--azul);
+    color: var(--amarillo);
+    font-weight: bold; }
+
+.botoncito2 {
+  display: inline-block;
+  padding: 10px;
+  width: 100px;
+  border: 3px solid var(--cyan);
+  background-color: var(--cyan);
+  color: var(--primario);
+  border-radius: 30px;
+  text-transform: uppercase;
+  transition: all 0.3s ease;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer; }
+  .botoncito2:hover {
+    border: 3px solid var(--azul);
+    background-color: var(--azul);
+    color: var(--cyan);
+    font-weight: bold; }
+
 .boton--contacto {
   width: 100%;
   border: 3px solid var(--amarillo);
@@ -144,7 +182,7 @@ li {
 .header {
   overflow: hidden;
   background-color: var(--cyan);
-  padding: 5px;
+  padding: 5px 10px;
   display: flexbox; }
 
 .header-right {
@@ -160,7 +198,7 @@ li {
   padding: 0 20px;
   font-weight: 600;
   text-transform: uppercase;
-  font-size: 23px;
+  font-size: 26px;
   font-style: italic; }
   .logo span {
     color: var(--azul); }
@@ -170,12 +208,12 @@ li {
   padding: 0 20px;
   color: var(--primario);
   text-align: center;
-  font-size: 16px;
+  font-size: 100px;
   line-height: 25px; }
 
 .top ul a {
   color: var(--primario);
-  font-size: 12px;
+  font-size: 14px;
   text-transform: uppercase;
   font-weight: bold; }
   .top ul a:hover {
@@ -251,6 +289,11 @@ li {
 
 .container-home h4 {
   color: var(--cyan); }
+
+.container-home img {
+  display: block;
+  width: 100%;
+  height: auto; }
 
 .typewriter h1 {
   border-right: 1px solid var(--cyan);
@@ -358,8 +401,7 @@ li {
       margin-bottom: 70px; } }
 
 .banner-servicios img {
-  width: 500px;
-  height: 500px; }
+  width: 100%; }
 
 /* CARD */
 .wrapper-grid {
@@ -404,12 +446,12 @@ li {
   color: var(--azul);
   padding: 1rem;
   background-color: var(--amarillo); }
+  .btn-servicios:hover {
+    background-color: var(--cyan);
+    color: var(--primario); }
 
 .container {
-  max-width: 1170px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 1em; }
+  height: calc(100vh-45px-102px); }
   @media only screen and (max-width: 600px) {
     .container {
       margin-bottom: 70px; } }
