--- a/SCSS/_botones.scss
+++ b/SCSS/_botones.scss
@@ -20,6 +20,50 @@
     }
 }
 
+.botoncito1 {
+    display: inline-block;
+    padding: 10px;
+    width: 100px;
+    border: 3px solid var(--amarillo);
+    background-color: var(--amarillo);
+    color: var(--primario);
+    border-radius: 30px;
+    text-transform: uppercase;
+    transition: all 0.3s ease;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+
+    &:hover {
+        border: 3px solid var(--azul);
+        background-color: var(--azul);
+        color: var(--amarillo);
+        font-weight: bold;
+    }
+}
+
+.botoncito2 {
+    display: inline-block;
+    padding: 10px;
+    width: 100px;
+    border: 3px solid var(--cyan);
+    background-color: var(--cyan);
+    color: var(--primario);
+    border-radius: 30px;
+    text-transform: uppercase;
+    transition: all 0.3s ease;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+
+    &:hover {
+        border: 3px solid var(--azul);
+        background-color: var(--azul);
+        color: var(--cyan);
+        font-weight: bold;
+    }
+}
+
 .boton--contacto {
     @extend .boton;
     width: 100%;
@@ -42,3 +86,5 @@
     background-color: var(--cyan);
     color: var(--primario);
 }
+
+// .btn-servicios:hover {}
