--- a/SCSS/_contacto.scss
+++ b/SCSS/_contacto.scss
@@ -1,10 +1,7 @@
 @import "breakpoints";
 
 .container {
-    max-width: 1170px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 1em;
+    height: calc(100vh-45px-102px);
 
     @include responsive (phone) {
         margin-bottom: 70px;
