--- a/SCSS/_home.scss
+++ b/SCSS/_home.scss
@@ -20,6 +20,12 @@
         color: var(--cyan);
     }
 
+    img {
+        display: block;
+        width: 100%;
+        height: auto;
+    }
+
 }
 
 
