--- a/SCSS/_navbar.scss
+++ b/SCSS/_navbar.scss
@@ -14,7 +14,7 @@
 .header {
     overflow: hidden;
     background-color: var(--cyan);
-    padding: 5px;
+    padding: 5px 10px;
     display: flexbox;
 }
 
@@ -34,7 +34,7 @@
     padding: 0 20px;
     font-weight: 600;
     text-transform: uppercase;
-    font-size: 23px;
+    font-size: 26px;
     font-style: italic;
 
     span {
@@ -48,13 +48,13 @@
         padding: 0 20px;
         color: var(--primario);
         text-align: center;
-        font-size: 16px;
+        font-size: 100px;
         line-height: 25px;
     }
 
     a {
         color: var(--primario);
-        font-size: 12px;
+        font-size: 14px;
         text-transform: uppercase;
         font-weight: bold;
 
@@ -140,7 +140,7 @@
             transition: all 0.3s;
         }
     }
-    
+
     @include responsive (phone) {
         display: block;
     }
