--- a/SCSS/_servicios.scss
+++ b/SCSS/_servicios.scss
@@ -1,8 +1,7 @@
 @import "breakpoints";
 
 .banner-servicios img {
-    width: 500px;
-    height: 500px;
+    width: 100%;
 }
 
 
@@ -59,4 +58,10 @@
     color: var(--azul);
     padding: 1rem;
     background-color: var(--amarillo);
+
+    &:hover {
+        // border: 3px solid var(--cyan);
+        background-color: var(--cyan);
+        color: var(--primario);
+    }
 }
