--- a/SCSS/_navbar.scss
+++ b/SCSS/_navbar.scss
@@ -65,6 +65,11 @@
             padding-bottom: 4px;
             transition: all .3s;
         }
+
+        @include responsive (dispositivo) {
+            // display: none;
+            font-size: 11px;
+        }
     }
 
     @include responsive (tablet) {
@@ -89,7 +94,7 @@
     height: 60px;
     background-color: var(--cyan);
     position: fixed;
-    z-index: 3;
+    z-index: 5;
     bottom: 0;
     border-radius: 30px 30px 0 0;
     display: none;
