--- a/SCSS/_tool.scss
+++ b/SCSS/_tool.scss
@@ -1,15 +1,13 @@
-.container {
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .skills {
     padding-top: var(- 40px);
     padding-bottom: var(40px);
     background-color: var(--primario);
     text-align: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 70px;
 
     p {
         font-size: 18px;
